load("//third_party:com_github_robotlocomotion_drake/tools/workspace/cpplint.bzl", "cpplint")
load(
    "//tools:dreal.bzl",
    "DREAL_VERSION",
    "dreal_cc_binary",
    "dreal_cc_library",
    "dreal_generate_file",
)
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(default_visibility = ["//visibility:private"])

genrule(
    name = "generate_version_header",
    outs = [
        "version.h",
    ],
    cmd = "$(location //tools:generate_version_header) %s > $@" % DREAL_VERSION,
    tools = [
        "//tools:generate_version_header",
    ],
)

dreal_cc_library(
    name = "version_header",
    hdrs = [
        "version.h",
    ],
    visibility = [":__subpackages__"],
)

dreal_cc_binary(
    name = "dreal",
    srcs = [
        "dreal_main.cc",
        "dreal_main.h",
    ],
    visibility = [
        "//dreal/test/dr:__pkg__",
        "//dreal/test/smt2:__pkg__",
    ],
    deps = [
        "//dreal/dr",
        "//dreal/smt2",
        "//dreal/util:filesystem",
        "//dreal/util:logging",
        "@ezoptionparser",
    ],
)

# ----------------------
# Bindings
# ----------------------
dreal_generate_file(
    name = "init_py",
    out = "__init__.py",
    content = """from dreal.symbolic import *
from dreal.util import *
from dreal.solver import *
from dreal.api import *""",
)

pkg_tar(
    name = "package_python",
    srcs = [
        ":init_py",
    ],
    extension = "tar.gz",
    package_dir = "lib/python2.7/site-packages/dreal",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

# ----------------------
# Header files to expose
# ----------------------
filegroup(
    name = "headers",
    srcs = [
        "dreal.h",
        "version.h",
    ],
    visibility = ["//:__pkg__"],
)

pkg_tar(
    name = "package_headers",
    srcs = [
        ":headers",
    ],
    extension = "tar.gz",
    package_dir = "include/dreal",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

pkg_tar(
    name = "package_bin",
    srcs = [
        ":dreal",
    ],
    extension = "tar.gz",
    mode = "0755",
    package_dir = "bin",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

pkg_tar(
    name = "package_sharedlib",
    srcs = [
        "//:libdreal.so",
    ],
    extension = "tar.gz",
    package_dir = "lib",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

cpplint()

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])
