load("//third_party/com_github_robotlocomotion_drake:tools/workspace/cpplint.bzl", "cpplint")
load("//third_party/com_github_robotlocomotion_drake:tools/workspace/python_lint.bzl", "python_lint")
load(
    "//tools:dreal.bzl",
    "DREAL_VERSION",
    "dreal_cc_binary",
    "dreal_cc_library",
    "dreal_generate_file",
    "dreal_pybind_library",
)
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(default_visibility = ["//visibility:private"])

genrule(
    name = "generate_version_header",
    outs = [
        "version.h",
    ],
    cmd = "$(location //tools:generate_version_header) %s > $@" % DREAL_VERSION,
    tools = [
        "//tools:generate_version_header",
    ],
)

dreal_cc_library(
    name = "version_header",
    hdrs = [
        "version.h",
    ],
    visibility = [":__subpackages__"],
)

dreal_cc_binary(
    name = "dreal",
    srcs = [
        "dreal_main.cc",
        "dreal_main.h",
    ],
    visibility = [
        "//dreal/test/dr:__pkg__",
        "//dreal/test/smt2:__pkg__",
    ],
    deps = [
        "//dreal/dr",
        "//dreal/smt2",
        "//dreal/util:filesystem",
        "//dreal/util:logging",
        "@ezoptionparser",
    ],
)

# ----------------------
# Bindings
# ----------------------
dreal_pybind_library(
    name = "dreal_py",
    cc_srcs = ["dreal_py.cc"],
    py_srcs = ["__init__.py"],
)

py_test(
    name = "api_test_py",
    srcs = [
        "test/python/api_test.py",
    ],
    main = "test/python/api_test.py",
    srcs_version = "PY2AND3",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_py",
    ],
)

# To test ODR (one definition rule).
dreal_pybind_library(
    name = "odr_test_module_py",
    cc_srcs = ["odr_test_module_py.cc"],
)

py_test(
    name = "odr_test_py",
    srcs = [
        "test/python/odr_test.py",
    ],
    main = "test/python/odr_test.py",
    srcs_version = "PY2AND3",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_py",
        ":odr_test_module_py",
    ],
)

py_test(
    name = "util_test_py",
    srcs = [
        "test/python/util_test.py",
    ],
    main = "test/python/util_test.py",
    srcs_version = "PY2AND3",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_py",
    ],
)

py_test(
    name = "symbolic_test_py",
    srcs = [
        "test/python/symbolic_test.py",
    ],
    main = "test/python/symbolic_test.py",
    srcs_version = "PY2AND3",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_py",
    ],
)

py_test(
    name = "solver_test_py",
    srcs = [
        "test/python/solver_test.py",
    ],
    main = "test/python/solver_test.py",
    srcs_version = "PY2AND3",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_py",
    ],
)

py_test(
    name = "smt2_test_py",
    srcs = [
        "test/python/smt2_test.py",
    ],
    main = "test/python/smt2_test.py",
    srcs_version = "PY2AND3",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_py",
    ],
)

# ----------------------
# Header files to expose
# ----------------------
filegroup(
    name = "headers",
    srcs = [
        "dreal.h",
        "version.h",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "package_headers",
    srcs = [
        ":headers",
    ],
    extension = "tar.gz",
    package_dir = "include/dreal",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

pkg_tar(
    name = "package_bin",
    srcs = [
        ":dreal",
    ],
    extension = "tar.gz",
    mode = "0755",
    package_dir = "bin",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

pkg_tar(
    name = "package_sharedlib",
    srcs = [
        "//:libdreal.so",
    ],
    extension = "tar.gz",
    package_dir = "lib",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

cpplint()

python_lint()

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])
