package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "cds",
    hdrs = glob([
        "cds/**",
    ]),
    srcs = glob([
        "src/*.cpp",
    ]),
    includes=["."],
    linkopts = select({
        "@dreal//tools:linux": ["-pthread"],
        "@//conditions:default": [],
    }),
)
