package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "cds",
    hdrs = glob([
        "cds/**",
    ]),
    srcs = glob([
        "src/*.cpp",
    ]),
    includes = ["."],
    defines = select({
        "@dreal//tools:linux": [],
        "@//conditions:default": ["_DARWIN_C_SOURCE"],
    }),
    linkopts = select({
        "@dreal//tools:linux": ["-pthread"],
        "@//conditions:default": [],
    }),
)
