package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "cds",
    srcs = glob([
        "src/*.cpp",
    ]),
    hdrs = glob([
        "cds/**",
    ]),
    defines = select({
        "@dreal//tools:linux": [],
        "@//conditions:default": ["_DARWIN_C_SOURCE"],
    }),
    includes = ["."],
    linkopts = select({
        "@dreal//tools:linux": ["-pthread"],
        "@//conditions:default": [],
    }),
)

exports_files(["LICENSE"])
