cc_library(
    name = "easyloggingpp",
    srcs = ["src/easylogging++.cc"],
    hdrs = ["src/easylogging++.h"],
    defines = [
        "ELPP_THREAD_SAFE",
        "ELPP_NO_DEFAULT_LOG_FILE",
        "ELPP_DISABLE_DEFAULT_CRASH_HANDLING",
    ],
    includes = [
        "src",
    ],
    visibility = ["//visibility:public"],
)
