load("//third_party:com_github_robotlocomotion_drake/tools/workspace/cpplint.bzl", "cpplint")
load("//third_party:com_github_robotlocomotion_drake/tools/workspace/python_lint.bzl", "python_lint")
load(
    "//tools:dreal.bzl",
    "dreal_cc_googletest",
    "dreal_cc_library",
    "dreal_generate_file",
    "dreal_pybind_library",
)
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(default_visibility = ["//visibility:private"])

# ---------
# Libraries
# ---------
dreal_cc_library(
    name = "api",
    srcs = [
        "api.cc",
    ],
    hdrs = [
        "api.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//dreal/solver",
        "//dreal/symbolic",
        "//dreal/util:assert",
        "//dreal/util:box",
        "//dreal/util:exception",
        "//dreal/util:logging",
    ],
)

# -----
# Tests
# -----
dreal_cc_googletest(
    name = "api_test",
    tags = ["unit"],
    deps = [
        ":api",
    ],
)

# ----------------------
# Bindings
# ----------------------
dreal_generate_file(
    name = "init_py",
    out = "__init__.py",
    content = """from dreal.api._dreal_api_py import *
import dreal.util""",
)

dreal_pybind_library(
    name = "dreal_api_py",
    cc_srcs = ["api_py.cc"],
    py_deps = [
        "//dreal/symbolic:dreal_symbolic_py",
        "//dreal/util:dreal_util_py",
        "//dreal/solver:dreal_solver_py",
    ],
    py_srcs = [":init_py"],
)

py_test(
    name = "api_test_py",
    srcs = [
        "test/api_test.py",
    ],
    main = "test/api_test.py",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_api_py",
    ],
)

py_test(
    name = "cav18_benchmark",
    srcs = [
        "test/cav18_benchmark.py",
    ],
    args = [
        "--precision 0.001",
        "--local-optimization",
    ],
    main = "test/cav18_benchmark.py",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_api_py",
    ],
)

pkg_tar(
    name = "package_python",
    srcs = [
        ":_dreal_api_py.so",
        ":dreal_api_py",
    ],
    extension = "tar.gz",
    package_dir = "lib/python2.7/site-packages/dreal/api",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# ----------------------
# Header files to expose
# ----------------------
filegroup(
    name = "headers",
    srcs = [
        "api.h",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "package_headers",
    srcs = [
        ":headers",
    ],
    extension = "tar.gz",
    package_dir = "include/dreal/api",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

cpplint()

python_lint()
