load("//third_party:com_github_google_kythe/tools/build_rules/lexyacc.bzl", "genlex", "genyacc")
load("//third_party:com_github_robotlocomotion_drake/tools/workspace/cpplint.bzl", "cpplint")
load("//tools:dreal.bzl", "dreal_cc_library")

package(default_visibility = ["//visibility:public"])

genyacc(
    name = "parser",
    srcs = ["parser.yy"],
    outs = [
        "parser.yy.cc",
        "parser.yy.hh",
        # Do not sort the above two.
        "location.hh",
        "position.hh",
        "stack.hh",
    ],
)

genlex(
    name = "scanner",
    srcs = [
        "scanner.ll",
        ":parser",
    ],
    out = "scanner.ll.cc",
)

dreal_cc_library(
    name = "dr",
    srcs = [
        "driver.cc",
        "run.cc",
        ":parser",
        ":scanner",
    ],
    hdrs = [
        "driver.h",
        "run.h",
        "scanner.h",
    ],
    deps = [
        "//dreal/solver",
        "//dreal/symbolic",
        "//dreal/util:scoped_unordered_map",
    ],
)

cpplint()
