load("//third_party/com_github_robotlocomotion_drake:tools/workspace/cpplint.bzl", "cpplint")
load(
    "//tools:dreal.bzl",
    "dreal_cc_googletest",
    "dreal_cc_library",
)

package(default_visibility = ["//visibility:private"])

# ---------
# Libraries
# ---------

dreal_cc_library(
    name = "nlopt_optimizer",
    srcs = [
        "nlopt_optimizer.cc",
    ],
    hdrs = [
        "nlopt_optimizer.h",
    ],
    visibility = ["//dreal/contractor:__pkg__"],
    deps = [
        "//dreal/solver:config",
        "//dreal/symbolic",
        "//dreal/util:assert",
        "//dreal/util:box",
        "//dreal/util:nnfizer",
        "@nlopt",
    ],
)

# -----
# Tests
# -----
dreal_cc_googletest(
    name = "nlopt_optimizer_test",
    deps = [
        ":nlopt_optimizer",
    ],
)

cpplint()

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])
